Merge from uckelman-merge:2469,2486-2487   Change BufferedImage type   Use Boolean.valueOf()   dispose() of Graphics2D objects
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@2494 67b53d14-2c14-4ace-a08f-0dab2b34000c