@@ -167,7 +167,7 @@ public abstract class GridEditor extends JDialog implements MouseListener, KeyLi
     numberingButton = new JButton(NUMBERING);
     numberingButton.addActionListener(new ActionListener() {
       public void actionPerformed(ActionEvent e) {
-        ((RegularGridNumbering) grid.getGridNumbering()).setAttribute(RegularGridNumbering.VISIBLE, new Boolean(! grid.getGridNumbering().isVisible()));
+        ((RegularGridNumbering) grid.getGridNumbering()).setAttribute(RegularGridNumbering.VISIBLE, Boolean.valueOf(! grid.getGridNumbering().isVisible()));
         repaint();
       }
     });
@@ -203,7 +203,7 @@ public abstract class GridEditor extends JDialog implements MouseListener, KeyLi
     setMode = false;
     grid.setVisible(saveGridVisible);
     if (grid.getGridNumbering() != null && saveNumberingVisible) {
-      ((RegularGridNumbering) grid.getGridNumbering()).setAttribute(RegularGridNumbering.VISIBLE, new Boolean(saveNumberingVisible));
+      ((RegularGridNumbering) grid.getGridNumbering()).setAttribute(RegularGridNumbering.VISIBLE, Boolean.valueOf(saveNumberingVisible));
     }
     repaint();
   }
