@@ -265,25 +265,25 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
     }
     else if (CORNERS.equals(key)) {
       if (val instanceof String) {
-        val = new Boolean((String) val);
+        val = Boolean.valueOf((String) val);
       }
       cornersLegal = ((Boolean) val).booleanValue();
     }
     else if (EDGES.equals(key)) {
       if (val instanceof String) {
-        val = new Boolean((String) val);
+        val = Boolean.valueOf((String) val);
       }
       edgesLegal = ((Boolean) val).booleanValue();
     }
     else if (VISIBLE.equals(key)) {
       if (val instanceof String) {
-        val = new Boolean((String) val);
+        val = Boolean.valueOf((String) val);
       }
       visible = ((Boolean) val).booleanValue();
     }
     else if (DOTS_VISIBLE.equals(key)) {
       if (val instanceof String) {
-        val = new Boolean((String) val);
+        val = Boolean.valueOf((String) val);
       }
       dotsVisible = ((Boolean) val).booleanValue();
     }
